--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <script src="https://cdn.bootcss.com/highlight.js/9.12.0/languages/cpp.min.js"></script> --><!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries --><!-- WARNING: Respond.js doesn't work if you view the page via file:// --><!--[if lt IE 9]>
 	<script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 	<script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-	<![endif]--><link href="styles.2e396daa7a6afe4045d1.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><!-- jQuery --><!-- <script src="assets/vendor/ledger/webusb.js"></script> --><script src="assets/vendor/ledger/web-bluetooth.js"></script><script src="https://lib.baomitu.com/jquery/3.3.1/jquery.min.js"></script><!-- <script>
+	<![endif]--><link href="styles.2e396daa7a6afe4045d1.bundle.css" rel="stylesheet"/></head><body><app-root></app-root><!-- jQuery --><script src="assets/vendor/ledger/webusb.js"></script><script src="assets/vendor/ledger/web-bluetooth.js"></script><script src="https://lib.baomitu.com/jquery/3.3.1/jquery.min.js"></script><!-- <script>
         $(".app_T_close").on("click", function(e) {
             $(".app_mask").css("display", "none")
         });
@@ -21,4 +21,4 @@
         /* gtag('config', 'UA-120660538-3'); */</script><!-- <script src="https://cdn.bootcss.com/vConsole/3.3.0/vconsole.min.js"></script>
     <script>
       var vConsole = new VConsole();
-    </script> --><script type="text/javascript" src="inline.9a8223827419d640b47e.bundle.js"></script><script type="text/javascript" src="polyfills.3e30ba9f95d9ba1c80c4.bundle.js"></script><script type="text/javascript" src="scripts.5c68064d805f1ca5ceaa.bundle.js"></script><script type="text/javascript" src="main.b9c6065275916e0f7ff4.bundle.js"></script></body></html>
+    </script> --><script type="text/javascript" src="inline.699078dbd888b07c87b8.bundle.js"></script><script type="text/javascript" src="polyfills.3e30ba9f95d9ba1c80c4.bundle.js"></script><script type="text/javascript" src="scripts.5c68064d805f1ca5ceaa.bundle.js"></script><script type="text/javascript" src="main.0d19610c56510b697010.bundle.js"></script></body></html>
